--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
     <title>Async JS</title>
   </head>
   <body></body>
-  <script src="callbacks.js"></script>
+  <script src="promises.js"></script>
 </html>
